kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: creeper-api-deployment
  namespace: creeper
  labels:
    app: creeper-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: creeper-api
  template:
    metadata:
      labels:
        app: creeper-api
    spec:
      containers:
        - name: creeper-api
          image: replaceme
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1500m
              memory: 1500Mi
          ports:
            - containerPort: 3001
          imagePullPolicy: "Always"
      imagePullSecrets:
        - name: regcred
