kubernetes/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: creeper-api-service
  namespace: creeper
spec:
  selector:
    app: creeper-api
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
